<resources>
    <string name="app_name">Android All</string>

    <string name="hello">Hello World, MovieSearchAppActivity!</string>

    <string name="search">Search</string>
    <string name="movies">Movies</string>
    <string name="people">People</string>

    //bluetooth
    <string name="Text">Status: -</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="List">List paired Devices</string>
    <string name="Find">Search new Devices / Cancel</string>

    //broadcast
    <string name="sendMessage">Write a message to broadcast!</string>
    <string name="myBroadcastIntent">Broadcast an Intent now…</string>

    //intent
    <string name="number">Write a phone number</string>
    <string name="sms1">Send sms with SENDTO</string>
    <string name="sms2">Send sms with SMS_INTENT</string>
    <string name="exception">Exception Condition</string>

    //content provider
    <string name="birthday">Birthday</string>
    <string name="name">Name</string>
    <string name="add">Add a new Birthday</string>
    <string name="show">Show all Birthdays</string>
    <string name="delete">Delete all Birthdays</string>
    <string name="activity">Activity</string>
    <string name="animation">Animation</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="broadcast">Broadcast</string>
    <string name="content_provider">Content Provider</string>
    <string name="savedprefrences">Saved Prefrences</string>
    <string name="sqlite">SQLite</string>
    <string name="gridview">Gridview</string>
    <string name="tab">Tabview</string>
</resources>
