<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/recipient"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number" />

    <Button
        android:id="@+id/sendto_sms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms1" />

    <Button
        android:id="@+id/smsintent_sms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms2" />

    <Button
        android:id="@+id/exception"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exception" />

</LinearLayout>
